<resources>
    <string name="help_url_people_main" />
    <string name="help_url_people_add" />
    <string name="help_url_people_edit" />
    <string name="config_export_vcard_type">default</string>
    <string name="config_import_vcard_type">default</string>
    <string name="config_export_file_prefix" />
    <string name="config_export_file_suffix" />
    <string name="config_export_file_extension">vcf</string>
    <string name="config_export_extensions_to_consider" />
    <string name="config_prohibited_phone_number_regexp" />
    <string name="account_docomo">Docomo</string>
    <string name="system_group_id_friend">Friends</string>
    <string name="system_group_id_family">Family</string>
    <string name="system_group_id_coworker">Coworkers</string>
    <string name="system_group_id_my_contacts">My Contacts</string>
    <string name="system_group_notes_friend">System Group: Friends</string>
    <string name="system_group_notes_family">System Group: Family</string>
    <string name="system_group_notes_coworker">System Group: Coworkers</string>
    <string name="system_group_id_ice">ICE</string>
    <string name="my_profile_default_name_for_aab">My Info</string>
    <string name="fail_to_find_postal_dialog_message">"“100-0014”
“1000014”
“永田町”
“千代田区永田町”"</string>
    <string name="too_many_find_postal_dialog_message">“永田町”→“千代田区永田町”</string>
    <string name="postal_provider_country">日本</string>
    <string name="postal_search_results">検索結果</string>
    <string name="people">People</string>
    <string name="max_available_count">Maximum number of recipients (%d) reached</string>
    <string name="max_available_contacts_count">Maximum number of contacts (%d) reached</string>
    <string name="max_available_nocount">Maximum number of recipients reached</string>
    <string name="max_available_for_att">Messages can be sent to a maximum of %d contacts</string>
    <string name="tutorial_complete">Tutorial complete.</string>
    <string name="contactsList">Contacts</string>
    <string name="application_task">android.task.contacts</string>
    <string name="callmessage_task">android.task.contacts.phone</string>
    <string name="shortcutContact">Contact</string>
    <string name="shortcutDialContact">Direct dial</string>
    <string name="shortcutMessageContact">Direct message</string>
    <string name="shortcutActivityTitle">Choose a contact shortcut</string>
    <string name="callShortcutActivityTitle">Choose a number to call</string>
    <string name="messageShortcutActivityTitle">Choose a number to message</string>
    <string name="contactPickerActivityTitle">Select contact</string>
    <string name="starredList">Starred</string>
    <string name="frequentList">Frequent</string>
    <string name="strequentList">Favourites</string>
    <string name="viewContactTitle">Contact details</string>
    <string name="viewContactDesription">View contact</string>
    <string name="editContactDescription">Edit contact</string>
    <string name="insertContactDescription">Create contact</string>
    <string name="editGroupDescription">Edit group</string>
    <string name="insertGroupDescription">Create group</string>
    <string name="contactDetailAbout">About</string>
    <string name="contactDetailUpdates">Updates</string>
    <string name="searchHint">Search contacts</string>
    <string name="menu_viewContact">View contact</string>
    <string name="copy_to_dialing_screen">Copy to dialling screen</string>
    <string name="menu_addStar">Add to favourites</string>
    <string name="menu_removeStar">Remove from favourites</string>
    <string name="menu_editContact">Edit</string>
    <string name="menu_deleteContact">Delete</string>
    <string name="menu_create_contact_shortcut">Place on Home screen</string>
    <string name="menu_call">Call contact</string>
    <string name="menu_sendSMS">Text contact</string>
    <string name="menu_splitAggregate">Separate</string>
    <string name="menu_editGroup">Edit</string>
    <string name="menu_deleteGroup">Delete</string>
    <string name="menu_addMember">Add member</string>
    <string name="menu_removeFromGroup">Remove from group</string>
    <string name="menu_new_contact_action_bar">Add Contact</string>
    <string name="menu_new_group_action_bar">Add Group</string>
    <string name="splitConfirmation_title">Separate contact?</string>
    <string name="splitConfirmation">This contact will be separated into multiple contacts.</string>
    <string name="menu_joinAggregate">Join</string>
    <string name="titleJoinContactDataWith">Link contacts</string>
    <string name="blurbJoinContactDataWith">Choose the contact you want to join with %s:</string>
    <string name="showAllContactsJoinItem">Show all contacts</string>
    <string name="separatorJoinAggregateSuggestions">Suggested contacts</string>
    <string name="separatorJoinAggregateAll">All contacts</string>
    <string name="contactsJoinedMessage">Contacts linked</string>
    <string name="menu_set_ring_tone">Caller ringtone saved.</string>
    <string name="menu_redirect_calls_to_vm">All calls to voicemail</string>
    <string name="readOnlyContactWarning">"You can't delete contacts from read-only accounts, but you can hide them in your contacts lists."</string>
    <string name="readOnlyContactDeleteConfirmation">This contact contains information from multiple accounts. Information from read-only accounts will be hidden in your contacts lists, not deleted.</string>
    <string name="multipleContactDeleteConfirmation">Deleting this contact will delete information from multiple accounts.</string>
    <string name="deleteConfirmation">This contact will be deleted.</string>
    <string name="syncableContactDeleteConfirmation">Deleting this contact when sync is enabled will delete the contact from the account it is saved under</string>
    <string name="syncableMultipleContactDeleteConfirmation">Deleting this contact when sync is enabled will also delete all linked contacts from other accounts</string>
    <string name="readOnlySimContactWarning">This contact will be deleted from your SIM card. Remember that you cannot add contacts to your SIM card</string>
    <string name="delete_multi_contact_completion_toast">%d deleted. Cannot delete preset contacts</string>
    <string name="menu_discard">Discard</string>
    <string name="invalidContactMessage">Contact not found.</string>
    <string name="createContactShortcutSuccessful">Contact widget added to Home screen.</string>
    <string name="pickerNewContactHeader">Create new contact</string>
    <string name="pickerNewContactText">Create new contact</string>
    <string name="photoPickerNotFoundText">No pictures are available on the phone.</string>
    <string name="attach_photo_dialog_title">Contact photo</string>
    <string name="customLabelPickerTitle">Custom label name</string>
    <string name="contactsGroupsLabel">Groups</string>
    <string name="display_options_sort_list_by">Sort by</string>
    <string name="display_options_view_names_as">Display contacts by</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_search">Search</string>
    <string name="menu_contacts_filter">Contacts to display</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_import_export">Import/export</string>
    <string name="recentCalls_addToContact">Add to contacts</string>
    <string name="recentCalls_deleteAll">Clear call log</string>
    <string name="description_dial_button">dial</string>
    <string name="description_delete_button">backspace</string>
    <string name="menu_show_outgoing_only">Show outgoing only</string>
    <string name="menu_show_incoming_only">Show incoming only</string>
    <string name="menu_show_missed_only">Show missed only</string>
    <string name="menu_show_voicemails_only">Show voicemails only</string>
    <string name="menu_show_all_calls">Show all calls</string>
    <string name="add_wait">Add wait</string>
    <string name="add_2sec_pause_sec">Add %d-sec pause</string>
    <string name="call_settings">Call</string>
    <string name="menu_newContact">New contact</string>
    <string name="save_contact">Save contact</string>
    <string name="menu_multiple_delete">Delete</string>
    <string name="swipe_to_call_or_message">Swipe to call or send msg</string>
    <string name="swipe_to_call_or_message_tts">Swipe to call or send message.</string>
    <string name="menu_merge">Merge accounts</string>
    <string name="menu_send">Send message or email</string>
    <string name="menu_select">Select</string>
    <string name="menu_knox_move">Move to KNOX</string>
    <string name="menu_knox_personal_move">Move to Personal mode</string>
    <string name="menu_backup">Backup</string>
    <string name="sim_management">SIM Management</string>
    <string name="menu_au_server">au server Backup/Restore</string>
    <string name="ContactsYellowpage">Yellow Pages</string>
    <string name="menu_contact_counter">Contact counter</string>
    <string name="menu_my_network">My network</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="create_contact">Create contact</string>
    <string name="showFilterPhones">Only contacts with phones</string>
    <string name="showFilterPhones_tts">Only contacts with phones</string>
    <string name="showFilterPhonesDescrip">Display contacts with phone numbers and hide other contacts.</string>
    <string name="service_numbers">Service numbers</string>
    <string name="send_contact">Send contact information</string>
    <string name="online_search">Online search</string>
    <string name="send_all_namecards">Send together</string>
    <string name="onehand_mode_on">One-handed operation on</string>
    <string name="show_dialpad">Show dialpad</string>
    <string name="hide_dialpad">Hide dialpad</string>
    <string name="eSurfing_dailup_title">eSurfing dial-up</string>
    <string name="swipe_function">"Make calls or send messages by swiping across a contact's information in Contacts or a log item in Phone."</string>
    <string name="swipe_right">Swipe right to make a call</string>
    <string name="swipe_left">Swipe left to send a message</string>
    <string name="uncheck_the_swipe">To change between tabs by swiping, disable the option below.</string>
    <string name="call_duration">Call duration</string>
    <string name="video_call">Video call</string>
    <string name="ip_call">IP call</string>
    <string name="send_message">Send message</string>
    <string name="speed_dial_setting">Speed dial</string>
    <string name="menu_copy_to_dialing">Copy to dialling screen</string>
    <string name="delete">Delete</string>
    <string name="send_number">Send number</string>
    <string name="add_2_block_list">Add to reject list</string>
    <string name="delete_from_block_list">Remove from reject list</string>
    <string name="block_settings">Block settings</string>
    <string name="delete_all_logs_for_this_number">Delete all logs for this number</string>
    <string name="menu_black_list_setting">Black list settings</string>
    <string name="menu_white_list_setting">White list settings</string>
    <string name="menu_link_contact">Link contacts</string>
    <string name="menu_separate_contact">Unlink contacts</string>
    <string name="menu_mark_as_default">Mark as default</string>
    <string name="menu_add_shortcut_to_home">Add shortcut to home screen</string>
    <string name="speed_dial">Speed dial</string>
    <string name="menu_businesscard">Business cards</string>
    <string name="share_name_card">Share name card</string>
    <string name="menu_send_contact_information_full">Send contact information</string>
    <string name="tag_easy_call_button">Easy Call Button</string>
    <string name="recorded_calls">Recorded calls</string>
</resources>