<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/show_all_calls" android:orderInCategory="1" android:title="@string/menu_show_all_calls" android:showAsAction="never" />
    <item android:id="@id/show_voicemails_only" android:orderInCategory="1" android:title="@string/menu_show_voicemails_only" android:showAsAction="never" />
    <item android:id="@id/show_missed_only" android:orderInCategory="1" android:title="@string/menu_show_missed_only" android:showAsAction="never" />
    <item android:id="@id/show_outgoing_only" android:orderInCategory="1" android:title="@string/menu_show_outgoing_only" android:showAsAction="never" />
    <item android:id="@id/show_incoming_only" android:orderInCategory="1" android:title="@string/menu_show_incoming_only" android:showAsAction="never" />
    <item android:icon="@drawable/tw_action_bar_icon_callduration" android:id="@id/call_duration" android:orderInCategory="1" android:title="@string/call_duration" android:showAsAction="withText" />
    <item android:id="@id/delete_all" android:orderInCategory="1" android:title="@string/recentCalls_deleteAll" android:showAsAction="never" />
</menu>