<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center_horizontal" android:id="@id/dialButtons" android:layout_width="360.0dip" android:layout_height="69.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:background="@color/dial_button_bg" android:layout_width="180.0dip" android:layout_height="69.0dip">
        <ImageButton android:gravity="center" android:id="@id/videocallbutton" android:background="@drawable/call_dial_btn_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/easymode_keypad_videocall_icon" android:scaleType="center" android:soundEffectsEnabled="false" android:contentDescription="@string/video_call" />
    </FrameLayout>
    <FrameLayout android:background="@color/dial_button_bg" android:layout_width="180.0dip" android:layout_height="69.0dip" android:layout_marginLeft="2.0dip" android:layout_marginRight="2.0dip" android:contentDescription="@string/call">
        <ImageButton android:gravity="center" android:id="@id/dialButton" android:tag="@string/tag_easy_call_button" android:background="@drawable/call_dial_btn_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/easymode_keypad_voicecall_icon" android:scaleType="center" android:soundEffectsEnabled="false" android:contentDescription="@string/call" />
    </FrameLayout>
    <FrameLayout android:background="@color/dial_button_bg" android:layout_width="119.0dip" android:layout_height="69.0dip">
        <ImageButton android:id="@id/deleteButton" android:background="@drawable/call_dial_btn_bg" android:visibility="gone" android:layout_width="119.0dip" android:layout_height="69.0dip" android:src="@drawable/call_back_icon" android:scaleType="fitXY" android:soundEffectsEnabled="false" android:contentDescription="@string/description_delete_button" />
    </FrameLayout>
    <ImageButton android:state_enabled="false" android:layout_gravity="center" android:id="@id/dialConferenceButton" android:background="@drawable/btn_call" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_add_group_holo" android:layout_weight="1.0" android:contentDescription="@string/description_dial_button" />
</LinearLayout>